<resources>
    <string name="app_name" translatable="false">Kelas.</string>
    <string name="remove_item">"Click to remove item "</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="chairbackground" translatable="false">chairbackground</string>
    <string name="AppTitle" translatable="false">Kelas.</string>
    <string name="welcomeText">Welcome</string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="no_telepon">Phone Number</string>
    <string name="password">Password</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="belum_memiliki_akun">Dont have account?</string>
    <string name="Register">Register</string>
    <string name="sudah_memiliki_akun">Already have account?</string>
    <string name="profilepicture" translatable="false">ProfilePicture</string>
    <string name="ProfileUsername" translatable="false">Nina Noni</string>
    <string name="keranjang">Cart</string>
    <string name="lamp_background" translatable="false">lamp_background</string>
    <string name="google_icon" translatable="false">google icon</string>
    <string name="total_harga">Total Cart</string>
    <string name="harga">Rp 0</string>
    <string name="beli_sekarang">Buy Now</string>
    <string name="riwayat_pesanan">History</string>
    <string name="procduct_image" translatable="false">sample product image</string>
    <string name="product_title" translatable="false">Product Title</string>
    <string name="in_stock">In Stock</string>
    <string name="menjadi_penjual">Become Seller</string>
    <string name="alamat">Alamat</string>
    <string name="OpenGoogleMaps">Open in Google Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="address">Address</string>
    <string name="setting_icon">Setting</string>
    <string name="alamat_sample" translatable="false">Jl. Nologaten, Ngaglik, Yogyakarta, Indonesia 55581</string>
    <string name="rupiah" translatable="false">Rp %.2f</string>

    <!-- Title Untuk Fragment-->
    <string name="title_home">home\n</string>
    <string name="title_chart">cart</string>
    <string name="title_chat">chat</string>
    <string name="title_profile">profile</string>
    <!--    -->

    <!--    String untuk bagian Home-->
    <string name="btn_offering">Grab It Now</string>
    <string name="title_offering">Available Only Today! </string>
    <string name="title_categories">Categories </string>
    <string name="categories1">Chair</string>
    <string name="categories2">Table</string>
    <string name="categories3">Cupboard</string>
    <string name="categories4">Bed</string>
    <string name="categories5">Fan</string>
    <string name="recommendation">Recommendation Product</string>
    <string name="searchbar_hint">"Search Here "</string>

    <!--String Untuk Detail-->
    <string name="title_detail">"Product Detail "</string>
    <string name="description" translatable="false">"Lorem ipsum dolor sit amet consectetur. Pharetra aliquet mattis tincidunt vestibulum viverra. Proin tortor elit vitae et lacus accumsan. Feugiat sit ullamcorper eget sed id. Dignissim in orci vel varius… "</string>
    <string name="seller_name" translatable="false">"Laurence "</string>
    <string name="star" translatable="false">"5.0 "</string>
    <string name="reviews" translatable="false">"  102 Reviews "</string>
    <string name="ask_seller"> Ask Seller</string>
    <string name="title_review" translatable="false">Review</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="title_detail_product">product detail</string>
    <string name="price" translatable="false">Rp 350.000</string>
    <string name="location">Location</string>
    <string name="adress" translatable="false">Jl. Nologaten, Ngaglik, Yogyakarta, Indonesia 55581</string>
    <string name="title_message">Message</string>
    <string name="NIK">NIK</string>
    <string name="passwordLogin">Password</string>
    <string name="back">back</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="become_seller">become Seller</string>
    <string name="enter_nik">Input NIK</string>
    <string name="phone">Phone No.</string>
    <string name="title_seller_profile">seller profile</string>
    <string name="buyer_tab">Buyer</string>
    <string name="seller_tab">Seller</string>
    <string name="selesai">Complete</string>
    <string name="diproses">On Process</string>
    <string name="dijual">For sale</string>
    <string name="jual_barang">Sell Item</string>
    <string name="tambah_produk">Add Product</string>
    <string name="harga_barang">Item Price</string>
    <string name="deskripsi_barang">Item Description</string>
    <string name="jenis_barang">Item Type</string>
    <string name="nama_barang">Item Name</string>
    <string name="tambah_gambar">Add Image</string>
    
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="all">All</string>
    <string name="recommendationn">Recommendation</string>
    <string name="ForYou">For You</string>
    <string name="message" translatable="false">Untuk itu, apabila Anda termasuk dalam kriteria tersebut, saya mohon kesediaan Anda untuk berpartisipasi dalam mengisi survey ini. Tidak ada jawaban benar atau salah dalam pengerjaan ini, sehingga silahkan untuk mengisi kuesioner ini secara jujur dan apa adanya. Hasil atau data pengisian survey akan digunakan sebatas ruang lingkup penelitian dan akademik, sehingga segala tanggapan dalam kuesioner ini akan dijaga kerahasiaannya.\n</string>
    <string name="edit_produk">Edit Product</string>
    <string name="edit_barang">Update Product</string>
    <string name="phonenumber">Phone Number</string>
    <string name="order">Order</string>
    <string name="batal">Cancel</string>
    <string name="batalkan_pesanan">Cancel Order</string>
    <string name="detail_goods">Learning Chair</string>
    <string name="simpan">Save</string>
    <string name="login_berhasil">Login Successful</string>
</resources>
