<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.capstone.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

<!--        <action-->
<!--            android:id="@+id/action_nav_home_to_nav_chat"-->
<!--            app:destination="@id/nav_chat" />-->

    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.capstone.view.cart.CartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.capstone.view.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.capstone.view.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />





</navigation>