<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin ="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily=""
       android:text="@string/AppTitle"
       android:textColor="@color/C6"
       android:textSize="24sp"
       android:textStyle="bold" />

   <androidx.appcompat.widget.SearchView
       android:id="@+id/searchBar"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_marginHorizontal="16dp"
       android:layout_weight="1"
       android:backgroundTint="@color/C2"
       android:clickable="true"
       android:elevation="2dp"
       android:focusable="true"
       android:hint="@string/searchbar_hint"
       android:outlineAmbientShadowColor="@color/black" />


  </LinearLayout>

  <!--<androidx.appcompat.widget.SearchView
      android:clickable="true"
      android:id="@+id/searchBar2"
      android:layout_width="match_parent"
      android:backgroundTint="@color/C2"
      android:elevation="1dp"
      android:focusable="true"
      android:outlineAmbientShadowColor="@color/black"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="25dp"
      android:hint="@string/searchbar_hint"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">
  </androidx.appcompat.widget.SearchView>-->

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/search"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:background="@color/white"
      android:elevation="2dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/linearLayout" />

 <androidx.constraintlayout.widget.ConstraintLayout

     android:id="@+id/offering"
     android:layout_width="387dp"
     android:layout_height="152dp"
     android:layout_marginTop="20dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/linearLayout">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingTop="40dp"
      android:scaleType="centerCrop"
      android:src="@drawable/rectangle_home" />

  <TextView
      android:id="@+id/textAvailable"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="35dp"
      android:layout_marginTop="35dp"
      android:fontFamily="@font/futura_hv_bt"
      android:text="@string/title_offering"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="142dp"
      android:layout_height="147dp"
      android:layout_marginEnd="40dp"
      android:src="@drawable/grey_chair"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_dapatsekarang"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:backgroundTint="@color/P1"
      android:fontFamily="@font/futura_hv_bt"
      android:text="@string/btn_offering"
      android:elevation="8dp"
      android:translationZ="8dp"
      android:textColor="@color/C6"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="@+id/textAvailable"
      app:layout_constraintTop_toBottomOf="@+id/textAvailable" />


 </androidx.constraintlayout.widget.ConstraintLayout>


  <TextView
      android:id="@+id/text_categories"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/futura_hv_bt"
      android:text="@string/title_categories"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/linearLayout"
      app:layout_constraintTop_toBottomOf="@+id/offering" />

  <HorizontalScrollView
      android:id="@+id/scrollcategories"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="8dp"
      android:scrollbars="none"
      app:layout_constraintEnd_toEndOf="@+id/offering"
      app:layout_constraintStart_toStartOf="@+id/offering"
      app:layout_constraintTop_toBottomOf="@id/text_categories">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"
       android:orientation="horizontal"
       android:padding="8dp">

    <Button
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/P1"
        android:text="@string/all"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/ForYou"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/categories2"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/cupboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/categories3"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/Bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/categories4"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/fan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/categories5"
        android:textColor="@color/black" />
   </LinearLayout>
  </HorizontalScrollView>

  <TextView
      android:id="@+id/title_recommendation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/recommendation"
      android:textSize="16sp"
      android:textStyle="bold"
      android:fontFamily="@font/futura_hv_bt"
      android:layout_marginTop="15dp"
      app:layout_constraintStart_toStartOf="@+id/text_categories"
      app:layout_constraintTop_toBottomOf="@+id/scrollcategories" />


  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_home"
      android:layout_marginHorizontal="16dp"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title_recommendation"
      tools:layout_height="1000dp"
      tools:listitem="@layout/card_rv_home" />

  <ProgressBar
      android:id="@+id/progressbar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@id/rv_home"
      app:layout_constraintEnd_toEndOf="@id/rv_home"
      app:layout_constraintStart_toStartOf="@id/rv_home"
      app:layout_constraintTop_toTopOf="@id/rv_home"
      tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>