<?xml version="1.0" encoding="utf-8"?>
<!--untuk menggunakan card view-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="139dp"
            android:layout_height="133dp"
            android:scaleType="centerCrop"
            android:src="@drawable/detailkursi"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_hv_bt"
            android:maxWidth="80dp"
            android:maxHeight="45dp"
            android:text="Kursi Belajar"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            card_view:layout_constraintStart_toStartOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_md_bt"
            android:text="@string/categories1"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            card_view:layout_constraintStart_toStartOf="@+id/title"
            card_view:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/futura_hv_bt"
            android:text="@string/price"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@+id/category"
            card_view:layout_constraintTop_toBottomOf="@+id/category"
            tools:ignore="SmallSp" />

        <ImageButton
            android:id="@+id/ibSetting"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/C6"
            android:contentDescription="@string/setting_icon"
            android:elevation="3dp"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_setting"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

        <Button
            android:id="@+id/btnPesananSelesai"
            style="@style/Bd3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/P1"
            android:text="@string/selesai"
            android:textColor="@color/black"
            android:visibility="visible"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/price" />

        <ImageButton
            android:id="@+id/btnPesananBatal"
            style="@style/Bd3"
            android:layout_width="27dp"
            android:layout_height="25dp"
            android:layout_margin="8dp"
            android:background="@drawable/ic_remove"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/batalkan_pesanan"
            android:scaleType="fitCenter"
            android:text="@string/batal"
            android:textColor="@color/white"
            android:visibility="visible"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/btnPesananSelesai"
            card_view:layout_constraintTop_toBottomOf="@+id/price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>